# skillchain

./: .gitignore  GETTING_STARTED.md  README.md
.kiro/specs/skillchain-platform/: design.md  requirements.md  tasks.md
backend/prisma/: schema.prisma
backend/src/: index.js
backend/src/controllers/: authController.js  credentialController.js  questController.js  userController.js
backend/src/middleware/: auth.js
backend/src/routes/: auth.js  credentials.js  quests.js  users.js
backend/src/services/: credentialService.js  ipfsService.js
contracts/: Anchor.toml
contracts/programs/skillchain/: Cargo.toml
contracts/programs/skillchain/src/: lib.rs
docs/: about.md  pitch.md
frontend/: next.config.js  tailwind.config.js
frontend/hooks/: useAuth.js  useWalletConnection.js
frontend/pages/: _app.js  dashboard.js  index.js  passport.js  quests.js
frontend/pages/quests/: [id].js
frontend/styles/: globals.css
frontend/utils/: api.js
scripts/: deploy.js  seed.js  setup.js  test-setup.js
